WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135227
[WK2] Fixed/Sticky layers can get mispositioned when the layer tree commit change their position or size
https://bugs.webkit.org/show_bug.cgi?id=135227
Summary
[WK2] Fixed/Sticky layers can get mispositioned when the layer tree commit ch...
Benjamin Poulain
Reported
2014-07-23 21:38:26 PDT
[WK2] Fixed/Sticky layers can get mispositioned when the layer tree commit change their position or size
Attachments
Patch
(14.45 KB, patch)
2014-07-23 21:54 PDT
,
Benjamin Poulain
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-07-23 21:54:38 PDT
Created
attachment 235404
[details]
Patch
Benjamin Poulain
Comment 2
2014-07-23 21:54:52 PDT
First round.
Simon Fraser (smfr)
Comment 3
2014-07-23 22:16:47 PDT
Comment on
attachment 235404
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235404&action=review
> Source/WebCore/page/scrolling/ScrollingTree.h:134 > + void fixedOrStickyNodeRemoved() { --m_fixedOrStickyNodeCount; }
Should assert that m_fixedOrStickyNodeCount isn't going to underflow.
> Source/WebCore/page/scrolling/mac/ScrollingTreeFixedNode.mm:50 > + scrollingTree().fixedOrStickyNodeRemoved();
Not a huge fan of doing work like this in the destructor. I think it would be better to make more explicit didAddNode/didRemoveNode (which also enter the node in m_nodeMap), but maybe that's too risky at this point.
Benjamin Poulain
Comment 4
2014-07-24 15:26:21 PDT
Committed
r171532
: <
http://trac.webkit.org/changeset/171532
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug